--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Won Wook SONG
-title: Ph.D. Candidate at Seoul Nat'l University, advised by Prof. Byung-Gon Chun
+title: Ph.D. Candidate at Seoul National University, advised by Prof. Byung-Gon Chun
 email: wonook@apache.org
 # phone: Your phone number (optional)
 website: wonook.github.io
@@ -50,7 +50,8 @@ gtag: "G-CD8QRK5MDY"
 about_profile_image: images/wonook2_1x1_.jpeg
 about_content: | # this will include new lines to allow paragraphs
   <img src="https://img.shields.io/badge/Interests-Distributed Systems, Clouds, Big Data, Data Processing, Machine Learning-dodgerblue" />  <img src="https://img.shields.io/badge/Languages-English, Korean, French-dodgerblue" />  <a href="mailto:wonook@apache.org"><img src="https://img.shields.io/badge/I'm looking for a job!-critical" /></a> <br>
-  Hi, my name's Won Wook (pronounced as Wonook, written as 원욱) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun. I'm about to graduate in August 2023, and my research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
+  Hi, my name's Won Wook (pronounced as Wonook, written as 원욱) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun.  
+  I'm about to graduate in August 2023, and my research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
 
 # I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
@@ -83,7 +84,7 @@ content:
         title: "SWAN: WAN-aware Stream Processing on Geographically-distributed Clusters"
         link: https://dl.acm.org/doi/pdf/10.1145/3546591.3547524
         link_text: Click for full text
-        sub_title: 2022. APSys (Asia-Pacific Workshop on Systems). ACM SIGOPS. ISBN 978-1-4503-9441-3. DOI https://doi.org/10.1145/3546591.3547524
+        sub_title: 2022. APSys (Asia-Pacific Workshop on Systems). ACM SIGOPS. ISBN 978-1-4503-9441-3. DOI [https://doi.org/10.1145/3546591.3547524](https://doi.org/10.1145/3546591.3547524)
         # caption: November 2017 - Present
         # quote: >
           # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
@@ -103,7 +104,7 @@ content:
         title: "Apache Nemo: A Framework for Optimizing Distributed Data Processing"
         link: https://dl.acm.org/doi/pdf/10.1145/3468144
         link_text: Click for full text
-        sub_title: 2021. Transactions on Computer Systems (TOCS). ACM. DOI https://doi.org/10.1145/3468144
+        sub_title: 2021. Transactions on Computer Systems (TOCS). ACM. DOI [https://doi.org/10.1145/3468144](https://doi.org/10.1145/3468144)
         # caption: November 2017 - Present
         # quote: >
           # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
@@ -123,7 +124,7 @@ content:
         title: "Harmony: A Scheduling Framework Optimized for Multiple Distributed Machine Learning Jobs"
         link: https://ieeexplore.ieee.org/document/9546495
         link_text: Click for full text
-        sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. DOI https://doi.org/10.1109/ICDCS51616.2021.00085
+        sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. DOI [https://doi.org/10.1109/ICDCS51616.2021.00085](https://doi.org/10.1109/ICDCS51616.2021.00085)
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, *Won Wook Song*, Youngseok Yang, Joo Yeon Kim and Byung-Gon Chun
         additional_links:
@@ -140,7 +141,7 @@ content:
         title: "Apache Nemo: A Framework for Building Distributed Dataflow Optimization Policies"
         link: https://www.usenix.org/system/files/atc19-yang-youngseok.pdf
         link_text: Click for full text
-        sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8. DOI https://dl.acm.org/doi/10.5555/3358807.3358824
+        sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8. DOI [https://dl.acm.org/doi/10.5555/3358807.3358824](https://dl.acm.org/doi/10.5555/3358807.3358824)
         description: | # this will include new lines to allow paragraphs
             Youngseok Yang, Jeongyoon Eo, Geon-Woo Kim, Joo Yeon Kim, Sanha Lee, Jangho Seo, *Won Wook Song*, and Byung-Gon Chun.
         additional_links:
@@ -157,7 +158,7 @@ content:
         title: "Automating System Configuration of Distributed Machine Learning"
         link: https://snuspl.github.io/assets/paper/eml.pdf
         link_text: Click for full text
-        sub_title: 2019. International Conference on Distributed Computing Systems (ICDCS) ‘19. IEEE. ISBN 978-1-7281-2520-6. DOI https://doi.org/10.1109/ICDCS.2019.00203
+        sub_title: 2019. International Conference on Distributed Computing Systems (ICDCS) ‘19. IEEE. ISBN 978-1-7281-2520-6. DOI [https://doi.org/10.1109/ICDCS.2019.00203](https://doi.org/10.1109/ICDCS.2019.00203)
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, Joo Seong Jeong, Gyeong-In Yu, Joo Yeon Kim, Ho Jin Park, Beomyeol Jeon, *Won Wook Song*, Gunhee Kim, Markus Weimer, Brian Cho, Byung-Gon Chun.
         additional_links:
@@ -174,7 +175,7 @@ content:
         title: "Pado: A Data Processing Engine for Harnessing Transient Resources in Datacenters"
         link: https://snuspl.github.io/assets/paper/p575-Yang.pdf
         link_text: Click for full text
-        sub_title: 2017. EuroSys '17. ACM. ISBN 978-1-4503-4938-3. DOI https://doi.org/10.1145/3064176.3064181
+        sub_title: 2017. EuroSys '17. ACM. ISBN 978-1-4503-4938-3. DOI [https://doi.org/10.1145/3064176.3064181](https://doi.org/10.1145/3064176.3064181)
         description: | # this will include new lines to allow paragraphs
             Youngseok Yang, Geon-Woo Kim, *Won Wook Song*, Yunseong Lee, Andrew Chung, Zhengping Qian, Brian Cho, and Byung-Gon Chun.
         additional_links:
@@ -245,7 +246,7 @@ content:
     content:
       - layout: top-middle
         title: Building a Distributed System for Batch & Stream Processing
-        link: Link to be updated
+        link: Undisclosed talk
         sub_title: Spotify Engineering Conference 2022 (SpEC 2022).
         caption: MAY 2022
       - layout: top-middle
@@ -275,7 +276,7 @@ content:
     content:
       - layout: top-middle
         title: Seoul National University, Republic of Korea 🇰🇷
-        sub_title: Ph.D. candidate, Computer Science
+        sub_title: Ph.D., Computer Science
         caption: 2017 - 2023
         description: | # logo
           <div style="text-align: center;">
@@ -381,7 +382,7 @@ content:
       - layout: left
         title: ButFitSeoul
         sub_title: Full-stack web developer
-        # caption: MAY 2018 - AUG. 2020
+        caption: MAY 2018 - AUG. 2020
         link: https://www.butfitseoul.com
         # link_text: Website
         description: | # this will include new lines to allow paragraphs
@@ -430,7 +431,7 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Due to my experiences across the globe, I happen to speak fluent English and Korean, as well as adequate French. The Myers-Briggs Type Indicator test tells me that I have a personality of an ENFJ (protagonist). Alongside my interests in computer systems 👨‍💻 some of my other interests are:
+      Due to my experiences across the globe🇫🇷🇨🇭🇺🇸🇰🇷, I happen to speak fluent *English and Korean*, as well as adequate *French*. The Myers-Briggs Type Indicator test tells me that I have a personality of an *ENFJ (protagonist)*😊. Alongside my interests in computer systems 👨‍💻 some of my other interests are:
       - Skiing & Snowboarding ⛷🏂
       - Tennis 🎾
       - Golfing ⛳️🏌️‍♂️
