--- a/_config.yml
+++ b/_config.yml
@@ -295,7 +295,7 @@ content:
           </div>
       - layout: top-middle
         title: École Polytechnique Fédérale de Lausanne, Switzerland 🇨🇭
-        sub_title: Exchange student, Informatiques (Computer Science)
+        sub_title: Exchange program, Informatiques (Computer Science)
         caption: 2015 - 2016
         description: | # logo
           <div style="text-align: center;">
