--- a/_config.yml
+++ b/_config.yml
@@ -424,7 +424,7 @@ content:
         caption: JAN. 2015 - APRIL 2015
         description: | # this will include new lines to allow paragraphs
           <div style="text-align: center;">
-          <img src="https://scontent.ficn4-1.fna.fbcdn.net/v/t39.30808-6/305920729_381065117562696_6788170728170444112_n.png?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=Aw1Kp84mPqUAX-b2Iy5&_nc_ht=scontent.ficn4-1.fna&oh=00_AfDF5k6F-2lWdGZ6C9jYEuBXpb-vRlVxyOI5ZroEUm61LQ&oe=6450D12E" alt="YelloMobile logo" height="60"/>
+          <img src="https://www.besuccess.com/wp-content/uploads/2014/10/Yello-Mobile-Logo.png" alt="YelloMobile logo" height="60"/>
           </div>
           - Part of the team running the Dieter app, once ranked 4th on the health category in Google Play Market in Korea, with over 1.5 million users.
           - Used Rails, AngularJS, Capistrano, Unicorn, and cooperated with Android and iOS developers, as well as with web designers.
