--- a/_config.yml
+++ b/_config.yml
@@ -64,16 +64,16 @@ content:
   - title: International Publications # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      # - layout: top
-      #   title: "*Blaze: Holistic Caching for Iterative Data Processing"
-      #   # link: https://www.usenix.org/conference/atc23/presentation/song
-      #   # link_text: Click for full text
-      #   sub_title: To appear in April 2024. European Conference on Computer Systems (EuroSys '24). ACM.
-      #   # caption: November 2017 - Present
-      #   # quote: >
-      #     # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-      #   description: | # this will include new lines to allow paragraphs
-      #       *Won Wook Song*, Jeongyoon Eo, Taegeon Um, Myeongjae Jeon, and Byung-Gon Chun
+      - layout: top
+        title: "*Blaze: Holistic Caching for Iterative Data Processing"
+        # link: https://www.usenix.org/conference/atc23/presentation/song
+        # link_text: Click for full text
+        sub_title: To appear in April 2024. European Conference on Computer Systems (EuroSys '24). ACM.
+        # caption: November 2017 - Present
+        # quote: >
+          # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            *Won Wook Song*, Jeongyoon Eo, Taegeon Um, Myeongjae Jeon, and Byung-Gon Chun
         # additional_links:
         #   - title: Link
         #     icon: fa fa-paperclip
