--- a/_config.yml
+++ b/_config.yml
@@ -377,9 +377,8 @@ content:
           <div style="text-align: center;">
           <img src="https://friendli.ai/_next/static/media/fai-logo-no-bg.1b3d63f0.svg" alt="friendliai logo" height="35"/>
           </div>
-          - System for AI
-          - Large-language models (LLMs)
-          - Inference serving
+          - Start-up experience in system for AI and large language models (LLMs)
+          - A system to make inference serving efficient
       - layout: left
         title: Software Platform Lab
         sub_title: PhD Candidate.
