--- a/_config.yml
+++ b/_config.yml
@@ -378,7 +378,7 @@ content:
           <img src="https://friendli.ai/_next/static/media/fai-logo-no-bg.1b3d63f0.svg" alt="friendliai logo" height="35"/>
           </div>
           - Start-up experience in system for AI and large language models (LLMs)
-          - A system to make inference serving efficient
+          - Creating a system to make inference serving efficient
       - layout: left
         title: Software Platform Lab
         sub_title: PhD Candidate.
